--- a/training_caption_generator.ipynb
+++ b/training_caption_generator.ipynb
@@ -25,14 +25,14 @@
     "from pickle import dump, load\n",
     "import numpy as np\n",
     "\n",
-    "from keras.applications.xception import Xception, preprocess_input\n",
-    "from keras.preprocessing.image import load_img, img_to_array\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras.utils import to_categorical\n",
-    "from keras.layers.merge import add\n",
-    "from keras.models import Model, load_model\n",
-    "from keras.layers import Input, Dense, LSTM, Embedding, Dropout\n",
+    "from tensorflow.keras.applications.xception import Xception, preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.layers.merge import add\n",
+    "from tensorflow.keras.models import Model, load_model\n",
+    "from tensorflow.keras.layers import Input, Dense, LSTM, Embedding, Dropout\n",
     "\n",
     "# small library for seeing the progress of loops.\n",
     "from tqdm import tqdm_notebook as tqdm\n",
